# P06_Personen_Verwaltung_Linked_List

./: CMakeLists.txt  README.md  TODO.txt
include/: command-handlers.h  command.h  file-printing.h  input.h  person.h
include/command/: command.h
include/list/: linked_list.h  node.h
include/sorting/: sorting.h
src/: command_handlers.c  input.c  main.c  person.c
src/command/: command.c
src/list/: linked_list.c  node.c
src/sorting/: sorting.c
tests/: main_test.c  person_test.c  person_test.h  test.c
tests/list/: linked_linked_test.h  linked_list_test.c
